resized some ui widgets, adjusted frame alignment

--- a/view/leaderboard.ui
+++ b/view/leaderboard.ui
@@ -16,10 +16,10 @@
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>941</width>
-     <height>491</height>
+     <x>0</x>
+     <y>0</y>
+     <width>954</width>
+     <height>507</height>
     </rect>
    </property>
    <widget class="QWidget" name="page">
@@ -28,8 +28,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>901</width>
-       <height>461</height>
+       <width>954</width>
+       <height>507</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -44,8 +44,8 @@
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>10</y>
+        <x>330</x>
+        <y>0</y>
         <width>446</width>
         <height>111</height>
        </rect>
@@ -95,14 +95,17 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
      <widget class="QTableWidget" name="tableWidget">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>150</y>
-        <width>541</width>
-        <height>291</height>
+        <x>290</x>
+        <y>180</y>
+        <width>351</width>
+        <height>151</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 700 9pt &quot;Segoe UI&quot;;</string>
+       <string notr="true">font: 700 9pt &quot;Segoe UI&quot;;
+font-size: 20px;
+background-color: rgb(199, 254, 255);
+color: rgb(0, 0, 0);</string>
       </property>
       <row>
        <property name="text">
