--- a/view/history.ui
+++ b/view/history.ui
@@ -19,10 +19,10 @@
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>941</width>
-     <height>491</height>
+     <x>0</x>
+     <y>0</y>
+     <width>954</width>
+     <height>507</height>
     </rect>
    </property>
    <widget class="QWidget" name="page">
@@ -31,8 +31,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>941</width>
-       <height>481</height>
+       <width>954</width>
+       <height>507</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -88,7 +88,12 @@ font: 700 28pt &quot;Segoe UI&quot;;</string>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 700 9pt &quot;Segoe UI&quot;;</string>
+       <string notr="true">font: 700 9pt &quot;Segoe UI&quot;;
+background-color: rgb(199, 254, 255);
+color: rgb(0, 0, 0);</string>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::DashDotLine</enum>
       </property>
      </widget>
      <widget class="QLabel" name="label_2">
